@@ -1,3 +1,7 @@
+drkns 01.07.2016 01:13:59 +0200 - build 4732
+
+1. Рефакторинг.
+
 drkns 30.06.2016 10:25:43 +0200 - build 4731
 
 1. Продолжение экспериментальных изменений в запускателе.
